--- a/app/CanvasManifest.json
+++ b/app/CanvasManifest.json
@@ -119,6 +119,7 @@
     "PreviewTemplateScreen",
     "SendOutScreen",
     "ImportExcelDataScreen",
+    "ImportEmailsScreen",
     "FormExcelDataScreen"
   ]
 }
