--- a/app/Src/ImportEmailsScreen.fx.yaml
+++ b/app/Src/ImportEmailsScreen.fx.yaml
@@ -18,12 +18,13 @@ ImportEmailsScreen As screen:
         Height: =49
         OnSelect: |-
             =Set(varResponse, Blank());
-            Set(varAttachment, JSON(Image1_2.Image, JSONFormat.IncludeBinaryData));
+            Set(varAttachment, JSON(EmailsBase64.Image, JSONFormat.IncludeBinaryData));
             Set(varBase64Only, Mid(varAttachment, Find(",", varAttachment)+1, Len(varAttachment)-Find(",", varAttachment) - 1));
-            Set(varResponse, ExcelUpload.Run(Last(AttachmentControl_2.Attachments).Name, varBase64Only).status);
+            Set(varResponse, ExcelEmailsUpload.Run(Last(AttachmentControl_2.Attachments).Name, varBase64Only).status);
             Reset(AttachmentControl_2);
             If(!IsBlank(varResponse), Refresh(RecipientsList));
-            Set(varAttachment, Blank())
+            Set(varAttachment, Blank());
+            Set(varResponse, Blank());
         Text: ="Import data"
         X: =517
         Y: =38
@@ -45,7 +46,7 @@ ImportEmailsScreen As screen:
         Y: =38
         ZIndex: =5
 
-    Image1_2 As image:
+    EmailsBase64 As image:
         Height: =49
         Image: =Last(AttachmentControl_2.Attachments).Value
         Width: =11
@@ -71,7 +72,7 @@ ImportEmailsScreen As screen:
             OnSelect: |-
                 =Select(Parent);
                 Set(varSelectedRecipientItem, SimpleRecipientGallery.Selected);
-                Navigate(FormExcelDataScreen);
+                UpdateContext({isPopupVisible: true});
             PaddingBottom: =10
             PaddingLeft: =10
             PaddingRight: =10
@@ -192,4 +193,89 @@ ImportEmailsScreen As screen:
 
         NavMenu_4 As NavMenu:
             Width: =220
+
+    PopupContainer1 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0, 0, 0.5)
+        Height: =Parent.Height
+        Width: =Parent.Width
+        ZIndex: =12
+
+        EmailForm As form:
+            DataSource: =SimpleEmailList
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =Parent.Height - 200
+            NumberOfColumns: =1
+            SnapToColumns: =false
+            Width: =Parent.Width - 380
+            X: =(Parent.Width / 2) - (Self.Width / 2)
+            Y: =(Parent.Height / 2) - (Self.Height / 2)
+            ZIndex: =1
+
+            Email_DataCard1 As typedDataCard.textualEditCard:
+                BorderStyle: =BorderStyle.Solid
+                DataField: ="Title"
+                Default: =ThisItem.Email
+                DisplayMode: =Parent.DisplayMode
+                DisplayName: =DataSourceInfo([@SimpleEmailList],DataSourceInfo.DisplayName,"Title")
+                Fill: =RGBA(0, 0, 0, 0)
+                Height: =50
+                MaxLength: =DataSourceInfo([@SimpleEmailList], DataSourceInfo.MaxLength, "Title")
+                Required: =true
+                Update: =DataCardValue3.Text
+                Width: =986
+                X: =20
+                Y: =20
+                ZIndex: =2
+
+                DataCardKey4 As label:
+                    AutoHeight: =true
+                    Height: =34
+                    Text: =Parent.DisplayName
+                    Width: =Parent.Width - 60
+                    Wrap: =false
+                    X: =30
+                    Y: =10
+                    ZIndex: =1
+
+                DataCardValue3 As text:
+                    BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                    Default: =Parent.Default
+                    DelayOutput: =true
+                    DisplayMode: =Parent.DisplayMode
+                    MaxLength: =Parent.MaxLength
+                    PaddingLeft: =5
+                    RadiusBottomLeft: =0
+                    RadiusBottomRight: =0
+                    RadiusTopLeft: =0
+                    RadiusTopRight: =0
+                    Tooltip: =Parent.DisplayName
+                    Width: =Parent.Width - 60
+                    X: =30
+                    Y: =DataCardKey4.Y + DataCardKey4.Height + 5
+                    ZIndex: =2
+
+                ErrorMessage4 As label:
+                    AutoHeight: =true
+                    Height: =10
+                    Live: =Live.Assertive
+                    PaddingBottom: =0
+                    PaddingLeft: =0
+                    PaddingRight: =0
+                    PaddingTop: =0
+                    Text: =Parent.Error
+                    Visible: =Parent.DisplayMode=DisplayMode.Edit
+                    Width: =Parent.Width - 60
+                    X: =30
+                    Y: =DataCardValue3.Y + DataCardValue3.Height
+                    ZIndex: =3
+
+                StarVisible4 As label:
+                    Align: =Align.Center
+                    Height: =DataCardKey4.Height
+                    Text: ="*"
+                    Visible: =And(Parent.Required, Parent.DisplayMode=DisplayMode.Edit)
+                    Width: =30
+                    Wrap: =false
+                    Y: =DataCardKey4.Y
+                    ZIndex: =4
 
