--- a/app/Src/ImportExcelDataScreen.fx.yaml
+++ b/app/Src/ImportExcelDataScreen.fx.yaml
@@ -433,11 +433,11 @@ ImportExcelDataScreen As screen:
     Container4_2 As groupContainer.manualLayoutContainer:
         Height: =Parent.Height - 80
         Visible: =varMenuIsOpen
-        Width: =240
+        Width: =300
         X: =20
         Y: =40
         ZIndex: =11
 
         NavMenu_3 As NavMenu:
-            Width: =220
+            Width: =Parent.Width
 
