--- a/app/Src/App.fx.yaml
+++ b/app/Src/App.fx.yaml
@@ -7,6 +7,7 @@ App As appinfo:
             {Title: "Recipient List", Screen: ImportExcelDataScreen},
             {Title: "Simple recepient List", Screen: ImportEmailsScreen}
         ));
+        Set(varCurrentUser, User());
         TemplatesScreen
     StartScreen: =CampaignScreen
 
