--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -396,3 +396,58 @@ EditCampaignScreen As screen:
         Y: =487
         ZIndex: =16
 
+    Container5 As groupContainer.manualLayoutContainer:
+        Height: =346
+        Width: =222
+        X: =18
+        Y: =281
+        ZIndex: =17
+
+        Label3 As label:
+            AutoHeight: =true
+            FontWeight: =FontWeight.Semibold
+            Text: |-
+                ="Available variables:"
+            Width: =Parent.Width
+            ZIndex: =1
+
+        Label5 As label:
+            AutoHeight: =true
+            Size: =12
+            Text: ="[$MyName] -- Current username"
+            Width: =Parent.Width
+            Y: =Label3.Height
+            ZIndex: =2
+
+        Label5_1 As label:
+            AutoHeight: =true
+            Size: =12
+            Text: ="[$PrimaryContactName] -- Role Primary Contact Name"
+            Width: =Parent.Width
+            Y: =Label3.Height + Label5.Height
+            ZIndex: =3
+
+        Label5_2 As label:
+            AutoHeight: =true
+            Size: =12
+            Text: ="[$RoleId] -- Role ID"
+            Width: =Parent.Width
+            Y: =Label3.Height + Label5.Height + Label5_1.Height
+            ZIndex: =4
+
+        Label5_3 As label:
+            AutoHeight: =true
+            Size: =12
+            Text: ="[$RoleTitle] -- Role Title"
+            Width: =Parent.Width
+            Y: =Label3.Height + Label5.Height + Label5_1.Height + Label5_2.Height
+            ZIndex: =5
+
+        Label5_4 As label:
+            AutoHeight: =true
+            Size: =12
+            Text: ="[$RoleDescription] -- Role Description"
+            Width: =Parent.Width
+            Y: =Label3.Height + Label5.Height + Label5_1.Height + Label5_2.Height + Label5_3.Height
+            ZIndex: =6
+
